sections/section-020/module-02/playground/examples/cases/c1-virtualservice-mirror-20-percent.yaml
# Case 1: copy only 20% of requests to v2 (protects v2 from full load).
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: probe
  namespace: starfleet
spec:
  hosts:
  - probe
  http:
  - route:
    - destination:
        host: probe
        subset: v1
    mirror:
      host: probe
      subset: v2
    mirrorPercentage:
      value: 20.0
